# ComputerVisionDraft

./: .gitattributes  README  README.MD  age way  command.txt  ffmpeg_demo.cpp
202008/ffmpeg_project/cmake_project_demo/: CMakeLists.txt
202008/opengl_project/learnopengl_cn_github_io/: .5_4_normal_mapping.cpp.un~  .6_1_check_compile_error.cpp.un~  1_2_windows_show  1_2_windows_show.cpp  1_4_rectangle  1_4_rectangle.cpp  1_4_rectangle2  1_4_triangle  1_4_triangle_exercise_1  1_4_triangle_exercise_1.cpp  1_4_triangle_exercise_2  1_4_triangle_exercise_2.cpp  1_4_triangle_exercise_3  1_4_triangle_exercise_3.cpp  1_5_shader_1  1_5_shader_1.cpp  1_5_shader_2  1_5_shader_2.cpp  1_5_shader_3_storage.cpp  1_5_shader_3_storage_1  1_5_shader_3_storage_exerices_2  1_5_shader_3_storage_exerices_3  1_6_texture_1  1_6_texture_1.cpp  1_6_texture_2  1_7_transferm  1_7_transferm.cpp  1_7_transferm_exerice_2  1_7_transferm_exerice_2.cpp  1_7_transferm_exerices_1  1_8_coordinate_1  1_8_coordinate_1.cpp  1_8_coordinate_2  1_8_coordinate_2.cpp  1_8_coordinate_3  1_8_coordinate_3.cpp  1_8_coordinate_3_exerices_1  1_9_camera_1  1_9_camera_1.cpp  1_9_camera_2  (+76 more)
202008/opengl_project/learnopengl_cn_github_io/raw/: .camera_2.h.swp  1.colors.fs  2.1.basic_lighting.fs  2.1.basic_lighting.vs  2.2.basic_lighting.fs  2.2.basic_lighting.vs  2.2.basic_lighting_exerices2.fs  2.2.basic_lighting_exerices2.vs  2.2.light_cube.vs  3.1.materials.fs  3.1.materials.vs  3.3.shader.fs  3.3.shader.fs_exerices_3  3.3.shader.vs  3.3.shader.vs_exerices_1  3.3.shader.vs_exerices_2  3.3.shader.vs_exerices_3  4.1.light_cube.vs  4.1.lighting_maps.fs  4.1.lighting_maps.vs  4.1.lighting_maps_exerices_1.fs  4.1.texture.fs  4.1.texture.vs  4.2.lighting_maps.vs  4.2.lighting_maps_exerice_4.fs  4.2.texture.fs  5.1.framebuffers.fs  5.1.framebuffers_screen.fs  5.1.texture.vs  (+20 more)
(+1112 files in other folders)
